--- a/WPM_RTCG/WPM_RTCG.vcxproj
+++ b/WPM_RTCG/WPM_RTCG.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="GL_Light.h" />
     <ClInclude Include="GL_Window.h" />
     <ClInclude Include="Mesh_Object.h" />
+    <ClInclude Include="Object_Material.h" />
     <ClInclude Include="Object_Shader.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
@@ -175,6 +176,7 @@
     <ClCompile Include="GL_Light.cpp" />
     <ClCompile Include="GL_Window.cpp" />
     <ClCompile Include="Mesh_Object.cpp" />
+    <ClCompile Include="Object_Material.cpp" />
     <ClCompile Include="Object_Shader.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
